main content is fixed to start from the header and be visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,7 @@ main {
     background-color: lightblue;
     /*Main content to take up any surplus space to push footer down*/
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /*Footer*/
